[gd_scene load_steps=31 format=2]

[ext_resource path="res://witch/witch.gd" type="Script" id=1]
[ext_resource path="res://witch/witch_first_walking1.png" type="Texture" id=2]
[ext_resource path="res://witch/witch_first_walking2.png" type="Texture" id=3]
[ext_resource path="res://witch/witch_first_walking3.png" type="Texture" id=4]
[ext_resource path="res://witch/witch_first_walking4.png" type="Texture" id=5]
[ext_resource path="res://witch/witch_first_walking5.png" type="Texture" id=6]
[ext_resource path="res://witch/witch_first_idle1.png" type="Texture" id=7]
[ext_resource path="res://witch/witch_first_idle2.png" type="Texture" id=8]
[ext_resource path="res://witch/witch_first_idle3.png" type="Texture" id=9]
[ext_resource path="res://witch/witch_first_idle4.png" type="Texture" id=10]
[ext_resource path="res://witch/cat_spritesheet.png" type="Texture" id=11]
[ext_resource path="res://witch/witch_first_falling.png" type="Texture" id=17]
[ext_resource path="res://witch/witch_first_jumping.png" type="Texture" id=22]
[ext_resource path="res://witch/jump.wav" type="AudioStream" id=23]
[ext_resource path="res://witch/cat.wav" type="AudioStream" id=24]
[ext_resource path="res://fireball/fireball.wav" type="AudioStream" id=25]
[ext_resource path="res://witch/blink.wav" type="AudioStream" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.09299, 7.49766 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 11 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 11 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 11 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 56, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 72, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 80, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "Falling",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "Falling_cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Idle_cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "Jumping_cat",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Running_cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[node name="Witch" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 10, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Running_cat"
frame = 2
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="sound_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -20.0

[node name="sound_cat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )

[node name="sound_shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -10.0

[node name="sound_blink" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -20.0

[node name="transform" type="Particles2D" parent="."]
visible = false

[node name="dash" type="Particles2D" parent="."]
visible = false

[node name="walking dust" type="Particles2D" parent="."]
visible = false
